# mw-kit

./: .git-ai-instructions  CONTRIBUTING.md  Makefile  README.md  lefthook.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  security.yml
playbook/: MANIFEST.md
playbook/k8s/: README.md  kubeconform.md  yamllint.md
playbook/monorepo/: README.md  ci-paths.md  docker-bake.md  layout.md  makefile.md  releases-monorepo.md
playbook/node/: README.md  biome.md  expo.md  package-json.md  typescript.md
playbook/python/: README.md  mypy.md  pydantic.md  pytest.md  releases-python.md  ruff.md  tach.md  uv.md
playbook/universal/: README.md  agent-instructions.md  ci-github.md  ci-gitlab.md  ci.md  claude-review.md  codeowners.md  contributing.md  conventional-commits.md  dependabot.md  docs-gen.md  git-ai-instructions.md  gitlab-pipeline-dedup.md  lefthook.md  line-limit.md  mise.md  releases-github.md  releases-gitlab.md  renovate.md  security.md
scripts/: build_manifest.py  scope.py
skills/comment-audit/: SKILL.md
skills/comment-audit/evals/: evals.json
skills/comment-audit/scripts/: preflight.py
skills/tooling-sync/: SKILL.md
tests/: test_scope.py
